# VtC-compiler

./: .gitignore  .gitmodules  Application.cpp  ApplicationMain.cpp  Apptest.cpp  CMakeLists.txt  CMakePresets.json  Jenkinsfile  README.md  conanfile.txt  main.cpp  readme.md  run.sh  vcpkg.json
ast/: CMakeLists.txt
ast/Expressions/: Assign.h  Binary.cpp  Binary.h  ExpressionsWorld.h  Grouping.h  Logical.cpp  Logical.h  Unary.cpp  Variable.cpp
ast/Expressions/Literals/: Literal.h  LiteralBool.h  LiteralDouble.cpp  LiteralDouble.h  LiteralFloat.cpp  LiteralString.cpp  LiteralString.h
ast/LogManager/: LogManager.cpp  LogManager.h
ast/Statements/: ClassStatement.cpp  ClassStatement.h  ExpressionStatement.cpp  FunctionStatement.cpp  FunctionStatement.h  PrintStatement.h  ReturnStatement.cpp  Statement.h  StatementsWorld.h  VarStatement.cpp  WhileStatement.cpp  WhileStatement.h
ast/Token/: Token.cpp  Token.h  TokenType.h  TokenTypeMappings.h
ast/Visitor/: OperationsDispatcher.h
cli/: CMakeLists.txt
cli/include/: CommandLineUserInterface.h
cli/src/: CommandLineUserInterface.cpp  ConsoleMain.cpp  moduleA.cpp  moduleA.h
cli/src/Compiler/: Compiler.cpp
gui/: CMakeLists.txt  resources.qrc
gui/Anchor/: Anchor.cpp  Anchor.h  AnchorFactory.h
gui/Collision/: CollisionManager.cpp  CollisionManager.h
gui/Core/GuiMain/: GuiMain.cpp  GuiMain.h
gui/MovableBlock/: MovableBlock.cpp  MovableBlock.h  MovableBlockFactory.cpp  MovableBlockFactory.h
gui/include/: GraphicalUserInterface.h
gui/qml/: Anchor.qml  BezierConnection.qml  BezierConnectionFactory.qml  BlockCreator.qml  BlockDiagram.qml  DraggableCanvas.qml  EditableButton.qml  EditableComboBox.qml  EditableConfirmField.qml  SearchableList.qml  TerminalDisplay.qml  TextDisplay.qml  Theme.qml  main.qml
gui/qml/Blocks/: BreakBlock.qml  CallEventBlock.qml  CreateVariableBySignalBlock.qml  CreateVariableByValueBlock.qml  EndBlock.qml  ForLoopBlock.qml  GetVariableBlock.qml  IfBlock.qml  ListenEventBlock.qml  PrintBlock.qml  PrintBySignalBlock.qml  PrintByValueBlock.qml  SetVariableBySignalBlock.qml  SetVariableByValueBlock.qml  SkipBlock.qml  SleepBySignalBlock.qml  StartBlock.qml  ValueBlock.qml  WhileBlock.qml
gui/qmls/: Anchor.qml  BezierConnection.qml  BezierCurve.qml  BlockDiagram.qml  EndDiagram.qml  MovableBlock.qml  SetVarDiagram.qml  StartDiagram.qml  main.qml
gui/qmls/Blocks/: BreakBlock.qml  CallEventBlock.qml  CreateVariableBySignalBlock.qml  CreateVariableByValueBlock.qml  EndBlock.qml  GetVariableBlock.qml  IfBlock.qml  ListenEventBlock.qml  PrintBlock.qml  SetVariableBySignalBlock.qml  SetVariableByValueBlock.qml  SkipBlock.qml  SleepByValueBlock.qml  StartBlock.qml  ValueBlock.qml
gui/src/: GraphicalUserInterface.cpp
gui/src/Anchor/: Anchor.h  AnchorFactory.h
gui/src/BezierConnection/: BezierConnection.h  BezierConnectionFactory.h  BezierConnectionManager.cpp  BezierConnectionManager.h
gui/src/BlockDiagram/: BlockDiagram.h  BlockDiagramFactory.h
gui/src/BlockDiagramManager/: BlockDiagramManager.cpp  BlockDiagramManager.h
gui/src/BlockReader/: BlockReader.cpp  BlockReader.h
gui/src/Blocks/: BinaryOp.h  Block.h  Break.h  Call.h  Connection.h  CreateVarBySignal.h  CreateVarByValue.h  End.h  ForLoop.h  GetVar.h  If.h  Listen.h  Print.h  PrintBySignal.h  PrintByValue.h  SetVar.h  SetVarBySignal.h  SetVarByValue.h  Skip.h  Start.h  UnaryOp.h  Value.h  Var.h  While.h
gui/src/Collision/: CollisionManager.cpp  CollisionManager.h
gui/src/GuiController/: GuiController.cpp  GuiController.h
gui/src/Serialization/: BlockReader.cpp  BlockReader.h  BlockReaderException.h  (+5 more)
interpreter/: CMakeLists.txt  Interpreter.cpp
interpreter/include/: Interpreter.h
interpreter/src/: Interpreter.cpp
jsonParser/: CMakeLists.txt  JsonParser.cpp
jsonParser/include/: JsonParser.h
jsonParser/src/: JsonParser.cpp
tests/: CMakeLists.txt  test_Scanner.cpp  testfile.vtc
tests/E2E/: E2Etests.cpp
tests/EvaluatingExpressions/: test_Interpreter.cpp
tests/Interpreter/: InterpreterTest.cpp
tests/InterpreterTests/: InterpreterValidationTest.cpp
tests/JsonParser/: JsonParserTest.cpp  test_JsonParser.cpp
tests/LogManager/: LoggingValidationTest.cpp
tests/Parser/: ParserValidationTest.cpp
tests/ParserTests/: ParserValidationTest.cpp
tests/ScannerTest/: ScannerValidationTest.cpp
tests/ScannerTests/: ScannerValidationTest.cpp
tests/TemplateTests/: TemplateTest.cpp
tests/TextParser/: TextParserTest.cpp  TextScannerTest.cpp
tests/TextScanner/: ScannerValidationTest.cpp
tests/templateTest/: CMakeLists.txt  TemplateTest.cpp
textParser/: CMakeLists.txt
textParser/include/: TextParser.h  TextScanner.h
textParser/src/: TextParser.cpp
tools/DispatcherGenerator/: Application.cpp  CMakeLists.txt  casts.csv  run.sh  typemap.csv
vtc/: CMakeLists.txt
vtc/Callable/: Callable.cpp  Callable.h  Return.cpp  Return.h
vtc/Compiler/: Compiler.cpp  Compiler.h
vtc/Environment/: Environment.cpp  Environment.h  EnvironmentException.h  SymbolTable.cpp  SymbolTable.h
vtc/Expressions/: Assign.cpp  Assign.h  Binary.cpp  Binary.h  Call.cpp  Call.h  Expression.h  Grouping.cpp  Grouping.h  Logical.cpp  Logical.h  Unary.cpp  Unary.h  Variable.cpp  Variable.h
vtc/Interpreter/: ArityMismatchException.cpp  Interpreter.cpp  Interpreter.h  NonBooleanConditionException.cpp
vtc/LogManager/: LogManager.cpp  LogManager.h
vtc/Parser/: ParseError.h  Parser.cpp  Parser.h  ParserBase.cpp
vtc/Scanner/: ErrorHandler.cpp  ErrorHandler.h  Scanner.cpp  Scanner.h
vtc/Statements/: BlockStatement.cpp  BlockStatement.h  ClassStatement.cpp  ClassStatement.h  ExpressionStatement.cpp  ExpressionStatement.h  FunctionStatement.cpp  FunctionStatement.h  IfStatement.cpp  IfStatement.h  PrintStatement.cpp  PrintStatement.h  ReturnStatement.cpp  ReturnStatement.h  Statement.cpp  Statement.h  StatementsWorld.cpp  VarStatement.cpp  VarStatement.h  WhileStatement.cpp  WhileStatement.h
vtc/Token/: Token.cpp  Token.h  TokenType.h  TokenTypeMappings.h
vtc/Visitor/: OperationsDispatcher.cpp  OperationsDispatcher.h  Visitor.h
(+182 files in other folders)
