project(vtc)

set(HEADER_FILES
        LogManager/LogManager.h
        Compiler/Compiler.h
        Parser/Parser.h
        Scanner/Scanner.h
        Token/Token.h
        Token/TokenType.h
        Scanner/ErrorHandler.h
        Token/TokenTypeMappings.h
        Statements/Statement.h
        Parser/ParseError.h
        Visitor/Visitor.h
        Expressions/Expression.h
        Expressions/Assign.h
        Expressions/Binary.h
        Expressions/Call.h
        Expressions/Grouping.h
        Expressions/Logical.h
        Expressions/Unary.h
        Expressions/Variable.h
        Expressions/Literals/Literal.h
        Expressions/Literals/LiteralBool.h
        Expressions/Literals/LiteralDouble.h
        Expressions/Literals/LiteralFloat.h
        Expressions/Literals/LiteralInt.h
        Expressions/Literals/LiteralString.h
        Visitor/OperationsDispatcher.h
        Statements/ExpressionStatement.h
        Statements/IfStatement.h
        Statements/WhileStatement.h
        Statements/PrintStatement.h
        Statements/BlockStatement.h
        Statements/FunctionStatement.h
        Statements/ClassStatement.h
        Statements/VarStatement.h
        Statements/ReturnStatement.h
        Statements/StatementsWorld.h
)

set(SOURCE_FILES
        LogManager/LogManager.cpp
        Compiler/Compiler.cpp
        Parser/Parser.cpp
        Token/Token.cpp
        Scanner/Scanner.cpp
        Scanner/ErrorHandler.cpp
        Expressions/Assign.cpp
        Expressions/Binary.cpp
        Expressions/Call.cpp
        Expressions/Grouping.cpp
        Expressions/Logical.cpp
        Expressions/Unary.cpp
        Expressions/Variable.cpp
        Statements/Statement.cpp
        Expressions/Literals/Literal.cpp
        Expressions/Literals/LiteralBool.cpp
        Expressions/Literals/LiteralDouble.cpp
        Expressions/Literals/LiteralFloat.cpp
        Expressions/Literals/LiteralInt.cpp
        Expressions/Literals/LiteralString.cpp
        Visitor/OperationsDispatcher.cpp
        Statements/ExpressionStatement.cpp
        Statements/IfStatement.cpp
        Statements/WhileStatement.cpp
        Statements/PrintStatement.cpp
        Statements/BlockStatement.cpp
        Statements/FunctionStatement.cpp
        Statements/ClassStatement.cpp
        Statements/VarStatement.cpp
        Statements/ReturnStatement.cpp
        Statements/StatementsWorld.cpp
)

add_library(vtc STATIC ${SOURCE_FILES} ${HEADER_FILES})
target_compile_definitions(vtc PRIVATE DEBUG_MODE)
